--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       zoomControl: false,
       scrollWheelZoom: false,
       tap: false
-    }).setView([41.76,-72.69], 11); // default center is overridden by Google Sheet options and points
+    }).setView([52.090736,5.121420], 11); // default center is overridden by Google Sheet options and points
   </script>
 
   <script type="text/javascript" src="./google-doc-url.js"></script>
